force-app/main/default/objects/Apttus_Config2__AppliedRuleInfo__c/Apttus_Config2__AppliedRuleInfo__c.object-meta.xml
<CustomObject>
    <description>Keeps track of rules applied to a configuration</description>
    <label>Applied Rule Info</label>
    <nameField>
        <label>Applied Rule Info Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Applied Rule Infos</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>