force-app/main/default/objects/Apttus_Config2__AppliedRuleInfo__c/fields/Apttus_Config2__ConfigurationId__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__ConfigurationId__c</fullName>
    <description>Reference to the configuration record to which the rule is applied.</description>
    <label>Configuration</label>
    <referenceTo>Apttus_Config2__ProductConfiguration__c</referenceTo>
    <relationshipLabel>Applied Rule Infos</relationshipLabel>
    <relationshipName>Applied_Rule_Infos</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>