force-app/main/default/objects/Apttus_Config2__AppliedRuleInfo__c/fields/Apttus_Config2__ConstraintRuleId__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__ConstraintRuleId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Constraint Rule</label>
    <referenceTo>Apttus_Config2__ConstraintRule__c</referenceTo>
    <relationshipLabel>Applied Rule Infos</relationshipLabel>
    <relationshipName>AppliedRuleInfos</relationshipName>
    <type>Lookup</type>
</CustomField>