force-app/main/default/objects/Apttus_Config2__AppliedRuleInfo__c/fields/Apttus_Config2__HasCriteriaInCondition__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__HasCriteriaInCondition__c</fullName>
    <defaultValue>false</defaultValue>
    <description>When any of the rule condition has criteria</description>
    <label>Has Criteria In Condition</label>
    <type>Checkbox</type>
</CustomField>