force-app/main/default/objects/Apttus_Config2__AppliedRuleInfo__c/fields/Apttus_Config2__Invalid__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__Invalid__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Whether the rule is invalid.</description>
    <label>Invalid</label>
    <type>Checkbox</type>
</CustomField>