force-app/main/default/objects/Apttus_Config2__AppliedRuleInfo__c/fields/Apttus_Config2__IsSourceLineRequired__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__IsSourceLineRequired__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Whether this rule is satisfied by a specific line item. When this field value is true the source line number must have a value.</description>
    <label>Is Source Line Required</label>
    <type>Checkbox</type>
</CustomField>