force-app/main/default/objects/Apttus_Config2__AppliedRuleInfo__c/fields/Apttus_Config2__NeedProcessing__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__NeedProcessing__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Whether the rule require processing.</description>
    <label>Need Processing</label>
    <type>Checkbox</type>
</CustomField>