force-app/main/default/objects/Apttus_Config2__AppliedRuleInfo__c/fields/Apttus_Config2__PrimaryLineNumber__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__PrimaryLineNumber__c</fullName>
    <description>The Primary Line Number of the product or option that is part of the product scope.</description>
    <inlineHelpText>The Primary Line Number of the product or option that is part of the product scope.</inlineHelpText>
    <label>Primary Line Number</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>