force-app/main/default/objects/Apttus_Config2__AppliedRuleInfo__c/fields/Apttus_Config2__SourceLineNumber__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__SourceLineNumber__c</fullName>
    <description>Identifies the Line Item that satisfies the rule.</description>
    <label>Source Line Number</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>