force-app/main/default/objects/Apttus_Config2__AppliedRuleInfo__c/fields/Apttus_Config2__WasFinalized__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__WasFinalized__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Keeps track of reaching the finalized stage</description>
    <label>Was Finalized</label>
    <type>Checkbox</type>
</CustomField>